Removing dodgy blackout image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body class="no-js">
         <script>
-            var wallpapers = [ 'blackout-nyc', 'boulder', 'downtown-nyc', 'flag', 'monument' ],
+            var wallpapers = [ 'boulder', 'downtown-nyc', 'flag', 'monument' ],
                 randomWallpaperIndex = Math.floor(Math.random() * wallpapers.length),
                 randomWallpaper = wallpapers[randomWallpaperIndex],
                 wallpaper = 'wallpapers/' + randomWallpaper + '.jpg';
