use downloaded fonticons and remove unrequired fonts

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <title>David Padbury</title>
         <link rel=stylesheet type="text/css" href="normalize.css" />
         <link rel=stylesheet type="text/css" href="main.css" />
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/fonticons.css">
     </head>
     <body class="no-js">
         <script>
@@ -22,9 +22,9 @@
             <div class=main-content>
                 <p><a href="http://davidpadbury.com">David Padbury</a></p>
                 <p class=buttons>
-                    <a href="https://twitter.com/davidpadbury"><i class="fa fa-twitter fa-1x"></i></a>
-                    <a href="https://www.linkedin.com/pub/david-padbury/4/437/656"><i class="fa fa-linkedin fa-1x"></i></a>
-                    <a href="https://github.com/davidpadbury"><i class="fa fa-github fa-1x"></i></a>
+                    <a href="https://twitter.com/davidpadbury"><i class="icon-twitter"></i></a>
+                    <a href="https://www.linkedin.com/pub/david-padbury/4/437/656"><i class="icon-linkedin"></i></a>
+                    <a href="https://github.com/davidpadbury"><i class="icon-github-circled"></i></a>
                 </p>
             </div>
         </main>
